fixed the alignment of the header

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -40,9 +40,10 @@ input {
 
 ul.left-links, ul.right-links {
   display: flex;
-  justify-content: space-between;
   list-style: none;
-  gap: 8px;
+  gap: 8px; 
+  margin: 8px;
+  padding: 8px;
 } 
 
 a {
